# ghc-typelits-appendsymbol

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  cabal.project  ghc-typelits-appendsymbol.cabal
src/GHC/TypeLits/: AppendSymbol.hs
tests/: ErrorTests.hs  Main.hs
