name:                ghc-typelits-appendsymbol
version:             0.1
synopsis:            Injectivity of GHC.TypeLits.AppendSymbol
description:
  A GHC constraint-solver plugin that witnesses the injectivity of
  @GHC.TypeLits.AppendSymbol@. To use the plugin, add the
  .
  @
  OPTIONS_GHC -fplugin GHC.TypeLits.AppendSymbol
  @
  .
  pragma to the header of your file.
homepage:            http://www.clash-lang.org/
bug-reports:         http://github.com/clash-lang/ghc-typelits-appendsymbol/issues
license:             BSD2
license-file:        LICENSE
author:              Christiaan Baaij
maintainer:          christiaan.baaij@gmail.com
copyright:           Copyright © 2019, QBayLogic B.V.
category:            Type System
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5

source-repository head
  type: git
  location: https://github.com/clash-lang/ghc-typelits-appendsymbol.git

flag deverror
  description:
    Enables `-Werror` for development mode and TravisCI
  default: False
  manual: True

library
  exposed-modules:     GHC.TypeLits.AppendSymbol
  build-depends:       base                      >= 4.10 && <5,
                       ghc                       >= 8.2  && <8.10,
                       ghc-tcplugins-extra       >= 0.2,
                       transformers              >= 0.4.2.0 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-extensions:    CPP
                       TupleSections
  if flag(deverror)
    ghc-options:         -Wall -Werror
  else
    ghc-options:         -Wall

test-suite test-ghc-typelits-extra
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  Other-Modules:       ErrorTests
  build-depends:       base                      >= 4.10 && <5,
                       ghc-typelits-appendsymbol,
                       inspection-testing        >= 0.4.2.1,
                       tasty                     >= 0.10,
                       tasty-hunit               >= 0.9
  hs-source-dirs:      tests
  default-language:    Haskell2010
  other-extensions:    DataKinds
                       TypeOperators
  if flag(deverror)
    ghc-options:       -O0 -dcore-lint
